--- a/sass/partial/_header.scss
+++ b/sass/partial/_header.scss
@@ -47,6 +47,7 @@
     width: 100%;
     height: 3px;
     background-color: #ccc;
+    @include transition(transform .3s);
     &:before, &:after {
       content: '';
       position: absolute;
@@ -90,7 +91,6 @@
     // opacity:0;
     // @include transition(visibility 0s 0.5s, opacity 0.5s);
     @include translateX(260px);
-    text-align: center;
     background-color: #183840;
     @include adjust-font-size-to(15px);
     &.is-mobile {
@@ -98,8 +98,9 @@
     }
   }
   .menu-inner {
+    position: relative;
+    padding-top: 61px;
     @include box-sizing(border-box);
-    padding: 24px 24px 0;
     height: 100%;
     overflow: auto;
     -webkit-overflow-scrolling: touch;
@@ -118,12 +119,12 @@
 
   .primary-nav {
     @include reset-list-style;
-    @include trailer(2);
+    padding: 12px 24px;
     li {
-      @include leader(1);
       position: relative;
     }
     a {
+      padding: 12px 0;
       display: block;
       color: white;
       &:hover {
@@ -135,20 +136,22 @@
   .menu-bottom {
     max-width: 400px;
     margin: 0 auto;
+    padding: 12px 24px;
+    border-top: 1px solid rgba(white, 0.2);
   }
 
   .press-release {
     display: block;
-    margin: rhythm(0) 0 rhythm(1);
+    padding: 12px 0;
     color: #ccc;
     &:hover {
       text-decoration: none;
     }
   }
   .search {
-    @include trailer(1.3);
-    position: relative;
-    display: inline-block;
+    position: absolute;
+    top: 0;
+    left: 0;
   }
   .search-icon {
     display: block;
@@ -174,21 +177,24 @@
 
   .social-nav {
     @include reset-list-style;
-    padding: 24px 0;
-    border-top: 1px solid rgba(white, 0.2);
+    padding: 12px 0;
+    // border-top: 1px solid rgba(white, 0.2);
+    @include pie-clearfix;
     li {
-      display: inline-block;
+      float: left;
+      margin-right: 24px;
     }
     a {
-      margin: 0 12px;
+      margin: 0;
       display: block;
       color: #ccc;
+      @include adjust-font-size-to(18px, 1);
       &:hover {
         text-decoration: none;
       }
-      &.icon-line {
-        margin-left: 6px;
-      }
+      // &.icon-line {
+      //   margin-left: 6px;
+      // }
     }
   }
 
@@ -206,58 +212,6 @@
     top: 1px;
     .lang {
       display: none;
-    }
-  }
-
-  @include at-breakpoint($pad) {
-    .menu {
-      @include adjust-font-size-to(18px);
-    }
-    .menu-inner {
-      @include padding-leader(3);
-    }
-    .menu-logo {
-      @include trailer(2);
-      width: 132px;
-      height: 132px;
-    }
-    .primary-nav {
-      @include trailer(3);
-      li {
-        @include leader(1.5);
-        position: relative;
-      }
-      a {
-        display: block;
-      }
-    }
-    .press-release {
-      display: block;
-      margin: rhythm(1.5) 0 rhythm(1.5);
-    }
-    .search {
-      @include trailer(2);
-    }
-    .search-icon {
-      @include adjust-font-size-to(20px);
-      top: 6px;
-    }
-    .search-input {
-      border: none;
-      @include border-radius(24px);
-      padding: 6px 12px;
-      @include adjust-font-size-to(15px);
-      width: 196px;
-    }
-    .social-nav {
-      padding: 24px 0;
-      a {
-        @include adjust-font-size-to(22px);
-        margin: 0 24px;
-        &.icon-line {
-          margin-left: 18px;
-        }
-      }
     }
   }
 
@@ -284,13 +238,16 @@
       position: absolute;
       left: 0px;
       right: 0px;
-      padding: 0 24px;
+      padding: 0;
       overflow: visible;
       bottom: auto;
       visibility: visible;
+      width: auto;
       @include opacity(1);
       background-color: transparent;
       @include transition(none);
+      @include transform(none);
+      text-align: center;
     }
     .menu-inner {
       height: auto;
@@ -305,7 +262,7 @@
       @include pie-clearfix;
       display: inline-block;
       @include trailer(0);
-      padding-top: 18px;
+      padding: 6px 0;
       li {
         margin-top: 0;
         float: left;
@@ -328,13 +285,15 @@
     .menu-bottom {
       border-top: none;
       position: absolute;
-      top: 18px;
+      padding: 18px 0;
+      top: 0px;
       right: 56px;
       @include pie-clearfix;
     }
     .press-release {
       @include adjust-font-size-to(15px);
       margin: 0 12px 0 0;
+      padding: 0;
       float: left;
       color: #999;
       &:hover {
@@ -342,8 +301,9 @@
       }
     }
     .search {
+      position: relative;
       float: left;
-      margin: 0 12px 0 0;
+      margin: 0 6px 0 0;
       display: block;
     }
     .search-icon {
@@ -399,6 +359,7 @@
       padding: 0 4px 0 6px;
       li {
         float: left;
+        margin-right: 0;
       }
       a {
         margin: 0 6px;
