add physical-culture page d3.js figure

--- a/policies/physical-culture.html.slim
+++ b/policies/physical-culture.html.slim
@@ -54,9 +54,13 @@
         p 因此，未來的體育運動政策也是以「健康國民、卓越競技、活力台灣」為目標，希望藉由運動人口的提升來促進全民健康。2014年台灣規律運動人口達33%，並有78%的民眾表示參與運動的主要目的是健康，顯見民眾已意識到運動與健康生活有重要的關聯性。
         p 然而實際上國人整體健康及體能情形卻沒有明顯改善，國民醫療保健支出迅速增加，2012年更上升到9,302億元，成長速度相當快，除了老年化的因素外，國人目前缺乏科學運動健身的知識，不僅不足以促進健康與體能，甚至可能造成反效果，因此要建立正確的運動知識，就須從小學開始就給予正確的體育教育，奠定運動基礎。
       .figure
-        img src="http://placehold.it/960x320?text=圖表一"
+        h4.section-sub-title 22 年間，每人平均健保支出增加 3 倍
+        .health-care-spending-chart
+        p.text-center 資料來源：<a href="http://www.mohw.gov.tw/cht/DOS/DM1_P.aspx?f_list_no=557&amp;fod_list_no=365&amp;doc_no=48453" target="_blank">國民醫療保健支出衛生福利部</a>
       .figure
-        img src="http://placehold.it/960x320?text=圖表二"
+        h4.section-sub-title 每日運動 15 分鐘可以降低死亡率 14%
+        .sport-15aDay-mortality-chart
+        p.text-center 此圖基於原研究發表之結論進行圖表製作，非原始資料僅供參考；<a href="http://www.thelancet.com/journals/lancet/article/PIIS0140-6736(11)60749-6/abstract" target="_blank">原研究</a>
       .text-content
         h3.section-title 競技運動困境
         h4.section-sub-title 培訓機制與經費編列不足<br><span class="dt-hide">，</span>缺乏嚴謹的競賽規劃與職涯照顧
