--- a/sass/page/policies-page/_center-content.sass
+++ b/sass/page/policies-page/_center-content.sass
@@ -19,7 +19,8 @@
 
   .figure
     +policy-container($figure-width)
-    +trailer()
+    +leader(3)
+    +trailer(2)
 
     img
       display: block
