--- a/sass/page/policies-page/_chartstyle.sass
+++ b/sass/page/policies-page/_chartstyle.sass
@@ -72,3 +72,15 @@
 
     &.numbers
       font-size: 60px
+
+.health-care-spending-chart, .sport-15aDay-mortality-chart
+
+  text
+    font-size: 18px
+    fill: white
+
+  .axis path, .axis line
+    fill: none
+    stroke: white
+    stroke-width: 1px
+    shape-rendering: crispEdges
