--- a/sass/partial/_header.scss
+++ b/sass/partial/_header.scss
@@ -23,21 +23,19 @@
   .logo_jp a { @include replace-text-with-svg(logo-jp); }
 
   .menu-btn {
-    position: relative;
-    float: right;
-    top: 0;
-    right: 0;
+    position: absolute;
+    top: 14px;
+    right: 10px;
     cursor: pointer;
     border: none;
     background-color: transparent;
     z-index: 250;
     color: $color-primary;
-    width: 24px;
-    height: 60px;
-    padding: 28px 0px;
-    margin: 0 12px 0 0;
+    width: 32px;
+    height: 32px;
+    padding: 4px;
+    margin: 0;
     @include box-sizing(border-box);
-    float: right;
     &:focus {
       outline: none;
     }
@@ -69,7 +67,6 @@
       top: 50%;
       left: 50%;
       margin: -1.5px 0 0 -50%;
-      // background-color: white;
     }
     &:before {
       @include transform( rotate(45deg) );
@@ -83,37 +80,27 @@
     position: fixed;
     top: 0;
     right: 0;
-    bottom: 0;
     width: 260px;
     @include box-sizing(border-box);
     z-index: 200;
-    // visibility:hidden;
-    // opacity:0;
-    // @include transition(visibility 0s 0.5s, opacity 0.5s);
     @include translateX(260px);
     background-color: #183840;
     @include adjust-font-size-to(15px);
-    &.is-mobile {
-      display: none;
-    }
   }
   .menu-inner {
     position: relative;
     padding-top: 61px;
     @include box-sizing(border-box);
-    height: 100%;
-    overflow: auto;
-    -webkit-overflow-scrolling: touch;
   }
 
   .primary-nav {
     @include reset-list-style;
-    padding: 12px 24px;
+    padding: 12px 0;
     li {
       position: relative;
     }
     a {
-      padding: 12px 0;
+      padding: 12px 24px;
       display: block;
       color: white;
       &:hover {
@@ -125,13 +112,13 @@
   .menu-bottom {
     max-width: 400px;
     margin: 0 auto;
-    padding: 12px 24px;
+    padding: 12px 0;
     border-top: 1px solid rgba(white, 0.2);
   }
 
   .press-release {
     display: block;
-    padding: 12px 0;
+    padding: 12px 24px;
     color: #ccc;
     &:hover {
       text-decoration: none;
@@ -166,8 +153,7 @@
 
   .social-nav {
     @include reset-list-style;
-    padding: 12px 0;
-    // border-top: 1px solid rgba(white, 0.2);
+    padding: 12px 24px;
     @include pie-clearfix;
     li {
       float: left;
@@ -181,24 +167,26 @@
       &:hover {
         text-decoration: none;
       }
-      // &.icon-line {
-      //   margin-left: 6px;
-      // }
     }
   }
 
   .global-language {
-    float: right;
+    position: absolute;
+    top: 0px;
+    height: 60px;
+    right: 48px;
     display: block;
-    margin-right: 12px;
   }
   .global-language-btn {
     color: #ccc;
     display: block;
-    @include adjust-font-size-to(26px, 1);
-    padding: 18px 0px;
+    @include adjust-font-size-to(24px, 1);
     position: relative;
+    margin: 14px 0 0;
+    padding: 0;
     top: 1px;
+    width: 32px;
+    height: 32px;
     .lang {
       display: none;
     }
@@ -251,7 +239,7 @@
       @include pie-clearfix;
       display: inline-block;
       @include trailer(0);
-      padding: 6px 0;
+      padding: 18px 0 0;
       li {
         margin-top: 0;
         float: left;
@@ -263,6 +251,7 @@
         @include adjust-font-size-to(15px);
         color: black;
         margin: 0 9px;
+        padding: 0;
         &:hover {
           color: $color-primary;
         }
@@ -276,17 +265,17 @@
       position: absolute;
       padding: 18px 0;
       top: 0px;
-      right: 56px;
+      right: 52px;
       @include pie-clearfix;
     }
     .press-release {
       @include adjust-font-size-to(15px);
-      margin: 0 12px 0 0;
+      margin: 0 8px 0 0;
       padding: 0;
       float: left;
       color: #999;
       &:hover {
-        color: #444;
+        color: #777;
       }
     }
     .search {
@@ -294,48 +283,6 @@
       float: left;
       margin: 0 6px 0 0;
       display: block;
-    }
-    .search-icon {
-      position: relative;
-      top: 0;
-      left: 0;
-      cursor: pointer;
-      display: block;
-      color: #999;
-      z-index: 110;
-      @include adjust-font-size-to(16px);
-      &:hover {
-        color: #444;
-      }
-    }
-    .search-input {
-      position: absolute;
-      top: -3px;
-      right: -8px;
-      z-index: 100;
-      background-color: #eee;
-      padding: 3px 12px;
-      text-align: left;
-      width: 0px;
-      color: #444;
-      @include input-placeholder-color(#444);
-      opacity:0;
-      @include transition(opacity 0.5s, width 0.5s, visibility 0s 0.5s);
-      visibility: hidden;
-      &:focus {
-        width: 144px;
-        opacity:1;
-        visibility: visible;
-        @include transition(opacity 0.5s, width 0.5s);
-      }
-    }
-    .search:hover {
-      .search-input {
-        width: 144px;
-        opacity:1;
-        visibility: visible;
-        @include transition(opacity 0.5s, width 0.5s);
-      }
     }
     .press-release + .social-nav, .search + .social-nav {
       border-left: 1px solid #eaeaea;
@@ -352,10 +299,10 @@
       }
       a {
         margin: 0 6px;
-        color: #999;
+        color: #aaa;
         @include adjust-font-size-to(16px);
         &:hover {
-          color: #444;
+          color: #777;
         }
         &.icon-line {
           margin-left: 3px;
@@ -363,8 +310,9 @@
       }
     }
     .global-language {
-      margin-right: 0;
-      position: relative;
+
+      position: absolute;
+      right: 0;
       z-index: 350;
       &.open .global-language-btn {
         color: #444;
@@ -375,9 +323,9 @@
     }
     .global-language-btn {
       top: 0;
-      color: #999;
+      color: #aaa;
       display: block;
-      margin: 18px 0;
+      margin: 14px 8px 0 0;
       padding: 0 24px 0 0;
       font-size: 15px;
       .lang {
@@ -393,18 +341,18 @@
         content: '';
         display: block;
         position: absolute;
-        top: 10px;
-        right: 13px;
+        top: 14px;
+        right: 3px;
         width: 0;
         height: 0;
         border-style: solid;
         border-width: 5px 5px 0 5px;
-        border-color: #999 transparent transparent transparent;
+        border-color: #aaa transparent transparent transparent;
       }
       &:hover {
-        color: #444;
+        color: #777;
         &:after {
-          border-color: #444 transparent transparent transparent;
+          border-color: #777 transparent transparent transparent;
         }
       }
     }
