--- a/sass/partial/_off-canvas.scss
+++ b/sass/partial/_off-canvas.scss
@@ -3,21 +3,15 @@
 }
 
 .off-canvas-mask {
-  position: fixed;
+  position: absolute;
   top: 0;
   left: 0;
   right: 0;
   z-index: 10000;
+  cursor: pointer;
 }
 
 .is-open-menu {
-  height: 100%;
-  body, .page-outer {
-    height: 100%;
-  }
-  .page-outer {
-    overflow: hidden;
-  }
   .page-inner {
     @include translateX(-260px);
   }
@@ -26,13 +20,6 @@
   }
 
   @include at-breakpoint($desktop) {
-    height: auto;
-    body, .page-outer {
-      height: auto;
-    }
-    .page-outer {
-      overflow: visible;
-    }
     .page-inner {
       @include transform(none);
     }
