--- a/stylesheets/all.css
+++ b/stylesheets/all.css
@@ -465,17 +465,11 @@ body { background-color: #183840; position: relative; }
 
 .page-inner { -webkit-transition: -webkit-transform 0.5s; -moz-transition: -moz-transform 0.5s; -o-transition: -o-transform 0.5s; transition: transform 0.5s; }
 
-.off-canvas-mask { position: fixed; top: 0; left: 0; right: 0; z-index: 10000; }
+.off-canvas-mask { position: absolute; top: 0; left: 0; right: 0; z-index: 10000; cursor: pointer; }
 
-.is-open-menu { height: 100%; }
-.is-open-menu body, .is-open-menu .page-outer { height: 100%; }
-.is-open-menu .page-outer { overflow: hidden; }
 .is-open-menu .page-inner { -webkit-transform: translateX(-260px); -moz-transform: translateX(-260px); -ms-transform: translateX(-260px); -o-transform: translateX(-260px); transform: translateX(-260px); }
 .is-open-menu .off-canvas-mask { bottom: 0; }
-@media (min-width: 1025px) { .is-open-menu { height: auto; }
-  .is-open-menu body, .is-open-menu .page-outer { height: auto; }
-  .is-open-menu .page-outer { overflow: visible; }
-  .is-open-menu .page-inner { -webkit-transform: none; -moz-transform: none; -ms-transform: none; -o-transform: none; transform: none; }
+@media (min-width: 1025px) { .is-open-menu .page-inner { -webkit-transform: none; -moz-transform: none; -ms-transform: none; -o-transform: none; transform: none; }
   .is-open-menu .off-canvas-mask { bottom: auto; } }
 
 .header .header-inner { -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box; max-width: 1512px; width: 100%; margin: 0 auto; background-color: white; border-bottom: 1px solid #ddd; }
@@ -485,7 +479,7 @@ body { background-color: #183840; position: relative; }
 .header .logo_en a { text-indent: -119988px; overflow: hidden; text-align: left; background-image: url('/images/logo-en.png?1447050772'); background-repeat: no-repeat; background-position: 50% 50%; width: 240px; height: 48px; background-image: none, url('/images/logo-en.svg?1447050772'); background-position: center center; -webkit-background-size: contain; -moz-background-size: contain; -o-background-size: contain; background-size: contain; }
 .header .logo_es a { text-indent: -119988px; overflow: hidden; text-align: left; background-image: url('/images/logo-es.png?1447050772'); background-repeat: no-repeat; background-position: 50% 50%; width: 240px; height: 48px; background-image: none, url('/images/logo-es.svg?1447050772'); background-position: center center; -webkit-background-size: contain; -moz-background-size: contain; -o-background-size: contain; background-size: contain; }
 .header .logo_jp a { text-indent: -119988px; overflow: hidden; text-align: left; background-image: url('/images/logo-jp.png?1447050772'); background-repeat: no-repeat; background-position: 50% 50%; width: 240px; height: 48px; background-image: none, url('/images/logo-jp.svg?1447050772'); background-position: center center; -webkit-background-size: contain; -moz-background-size: contain; -o-background-size: contain; background-size: contain; }
-.header .menu-btn { position: relative; float: right; top: 0; right: 0; cursor: pointer; border: none; background-color: transparent; z-index: 250; color: #50b584; width: 24px; height: 60px; padding: 28px 0px; margin: 0 12px 0 0; -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box; float: right; }
+.header .menu-btn { position: absolute; top: 14px; right: 10px; cursor: pointer; border: none; background-color: transparent; z-index: 250; color: #50b584; width: 32px; height: 32px; padding: 4px; margin: 0; -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box; }
 .header .menu-btn:focus { outline: none; }
 .header .menu-btn-line { position: relative; width: 100%; height: 3px; background-color: #ccc; -webkit-transition: -webkit-transform 0.3s; -moz-transition: -moz-transform 0.3s; -o-transition: -o-transform 0.3s; transition: transform 0.3s; }
 .header .menu-btn-line:before, .header .menu-btn-line:after { content: ''; position: absolute; left: 0; width: 100%; height: 3px; background-color: #ccc; }
@@ -495,15 +489,14 @@ body { background-color: #183840; position: relative; }
 .header .is-open-menu .menu-btn-line:before, .header .is-open-menu .menu-btn-line:after { top: 50%; left: 50%; margin: -1.5px 0 0 -50%; }
 .header .is-open-menu .menu-btn-line:before { -webkit-transform: rotate(45deg); -moz-transform: rotate(45deg); -ms-transform: rotate(45deg); -o-transform: rotate(45deg); transform: rotate(45deg); }
 .header .is-open-menu .menu-btn-line:after { -webkit-transform: rotate(-45deg); -moz-transform: rotate(-45deg); -ms-transform: rotate(-45deg); -o-transform: rotate(-45deg); transform: rotate(-45deg); }
-.header .menu { position: fixed; top: 0; right: 0; bottom: 0; width: 260px; -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box; z-index: 200; -webkit-transform: translateX(260px); -moz-transform: translateX(260px); -ms-transform: translateX(260px); -o-transform: translateX(260px); transform: translateX(260px); background-color: #183840; font-size: 15px; line-height: 24px; }
-.header .menu.is-mobile { display: none; }
-.header .menu-inner { position: relative; padding-top: 61px; -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box; height: 100%; overflow: auto; -webkit-overflow-scrolling: touch; }
-.header .primary-nav { margin: 0; padding: 0; border: 0; list-style: none; padding: 12px 24px; }
+.header .menu { position: fixed; top: 0; right: 0; width: 260px; -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box; z-index: 200; -webkit-transform: translateX(260px); -moz-transform: translateX(260px); -ms-transform: translateX(260px); -o-transform: translateX(260px); transform: translateX(260px); background-color: #183840; font-size: 15px; line-height: 24px; }
+.header .menu-inner { position: relative; padding-top: 61px; -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box; }
+.header .primary-nav { margin: 0; padding: 0; border: 0; list-style: none; padding: 12px 0; }
 .header .primary-nav li { position: relative; }
-.header .primary-nav a { padding: 12px 0; display: block; color: white; }
+.header .primary-nav a { padding: 12px 24px; display: block; color: white; }
 .header .primary-nav a:hover { text-decoration: none; }
-.header .menu-bottom { max-width: 400px; margin: 0 auto; padding: 12px 24px; border-top: 1px solid rgba(255, 255, 255, 0.2); }
-.header .press-release { display: block; padding: 12px 0; color: #ccc; }
+.header .menu-bottom { max-width: 400px; margin: 0 auto; padding: 12px 0; border-top: 1px solid rgba(255, 255, 255, 0.2); }
+.header .press-release { display: block; padding: 12px 24px; color: #ccc; }
 .header .press-release:hover { text-decoration: none; }
 .header .search { position: absolute; top: 0; left: 0; }
 .header .search-icon { display: block; position: absolute; top: 3px; left: 12px; font-size: 16px; line-height: 24px; color: rgba(255, 255, 255, 0.6); }
@@ -513,13 +506,13 @@ body { background-color: #183840; position: relative; }
 .header .search-input::-moz-placeholder { /* Mozilla Firefox 19+ */ color: white; }
 .header .search-input:-ms-input-placeholder { /* Internet Explorer 10+ */ color: white; }
 .header .search-input:focus { outline: none; }
-.header .social-nav { margin: 0; padding: 0; border: 0; list-style: none; padding: 12px 0; }
+.header .social-nav { margin: 0; padding: 0; border: 0; list-style: none; padding: 12px 24px; }
 .header .social-nav:after { content: ""; display: table; clear: both; }
 .header .social-nav li { float: left; margin-right: 24px; }
 .header .social-nav a { margin: 0; display: block; color: #ccc; font-size: 18px; line-height: 24px; }
 .header .social-nav a:hover { text-decoration: none; }
-.header .global-language { float: right; display: block; margin-right: 12px; }
-.header .global-language-btn { color: #ccc; display: block; font-size: 26px; line-height: 24px; padding: 18px 0px; position: relative; top: 1px; }
+.header .global-language { position: absolute; top: 0px; height: 60px; right: 48px; display: block; }
+.header .global-language-btn { color: #ccc; display: block; font-size: 24px; line-height: 24px; position: relative; margin: 14px 0 0; padding: 0; top: 1px; width: 32px; height: 32px; }
 .header .global-language-btn .lang { display: none; }
 @media (min-width: 1025px) { .header { position: fixed; left: 0; top: 0; right: 0; z-index: 350; margin: 0 auto; }
   .header .header-inner { position: relative; }
@@ -528,42 +521,33 @@ body { background-color: #183840; position: relative; }
   .header .menu { display: block; position: absolute; left: 0px; right: 0px; padding: 0; overflow: visible; bottom: auto; visibility: visible; width: auto; opacity: 1; background-color: transparent; -webkit-transition: none; -moz-transition: none; -o-transition: none; transition: none; -webkit-transform: none; -moz-transform: none; -ms-transform: none; -o-transform: none; transform: none; text-align: center; }
   .header .menu-inner { height: auto; overflow: visible; max-width: none; padding: 0; }
   .header .menu-logo { display: none; }
-  .header .primary-nav { display: inline-block; margin-bottom: 0px; padding: 6px 0; }
+  .header .primary-nav { display: inline-block; margin-bottom: 0px; padding: 18px 0 0; }
   .header .primary-nav:after { content: ""; display: table; clear: both; }
   .header .primary-nav li { margin-top: 0; float: left; }
   .header .primary-nav li:before { display: none; }
-  .header .primary-nav a { font-size: 15px; line-height: 24px; color: black; margin: 0 9px; }
+  .header .primary-nav a { font-size: 15px; line-height: 24px; color: black; margin: 0 9px; padding: 0; }
   .header .primary-nav a:hover { color: #50b584; }
   .header .primary-nav .is-active a { color: #50b584; }
-  .header .menu-bottom { border-top: none; position: absolute; padding: 18px 0; top: 0px; right: 56px; }
+  .header .menu-bottom { border-top: none; position: absolute; padding: 18px 0; top: 0px; right: 52px; }
   .header .menu-bottom:after { content: ""; display: table; clear: both; }
-  .header .press-release { font-size: 15px; line-height: 24px; margin: 0 12px 0 0; padding: 0; float: left; color: #999; }
-  .header .press-release:hover { color: #444; }
+  .header .press-release { font-size: 15px; line-height: 24px; margin: 0 8px 0 0; padding: 0; float: left; color: #999; }
+  .header .press-release:hover { color: #777; }
   .header .search { position: relative; float: left; margin: 0 6px 0 0; display: block; }
-  .header .search-icon { position: relative; top: 0; left: 0; cursor: pointer; display: block; color: #999; z-index: 110; font-size: 16px; line-height: 24px; }
-  .header .search-icon:hover { color: #444; }
-  .header .search-input { position: absolute; top: -3px; right: -8px; z-index: 100; background-color: #eee; padding: 3px 12px; text-align: left; width: 0px; color: #444; opacity: 0; -webkit-transition: opacity 0.5s, width 0.5s, visibility 0s; -webkit-transition-delay: 0s, 0s, 0.5s; -moz-transition: opacity 0.5s, width 0.5s, visibility 0s 0.5s; -o-transition: opacity 0.5s, width 0.5s, visibility 0s 0.5s; transition: opacity 0.5s, width 0.5s, visibility 0s 0.5s; visibility: hidden; }
-  .header .search-input::-webkit-input-placeholder { /* WebKit browsers */ color: #444444; -webkit-font-smoothing: antialiased; }
-  .header .search-input:-moz-placeholder { /* Mozilla Firefox 4 to 18 */ color: #444444; }
-  .header .search-input::-moz-placeholder { /* Mozilla Firefox 19+ */ color: #5e5e5e; }
-  .header .search-input:-ms-input-placeholder { /* Internet Explorer 10+ */ color: #444444; }
-  .header .search-input:focus { width: 144px; opacity: 1; visibility: visible; -webkit-transition: opacity 0.5s, width 0.5s; -moz-transition: opacity 0.5s, width 0.5s; -o-transition: opacity 0.5s, width 0.5s; transition: opacity 0.5s, width 0.5s; }
-  .header .search:hover .search-input { width: 144px; opacity: 1; visibility: visible; -webkit-transition: opacity 0.5s, width 0.5s; -moz-transition: opacity 0.5s, width 0.5s; -o-transition: opacity 0.5s, width 0.5s; transition: opacity 0.5s, width 0.5s; }
   .header .press-release + .social-nav, .header .search + .social-nav { border-left: 1px solid #eaeaea; }
   .header .social-nav { border-top: none; border-right: 1px solid #eaeaea; float: left; font-size: 16px; padding: 0 4px 0 6px; }
   .header .social-nav li { float: left; margin-right: 0; }
-  .header .social-nav a { margin: 0 6px; color: #999; font-size: 16px; line-height: 24px; }
-  .header .social-nav a:hover { color: #444; }
+  .header .social-nav a { margin: 0 6px; color: #aaa; font-size: 16px; line-height: 24px; }
+  .header .social-nav a:hover { color: #777; }
   .header .social-nav a.icon-line { margin-left: 3px; }
-  .header .global-language { margin-right: 0; position: relative; z-index: 350; }
+  .header .global-language { position: absolute; right: 0; z-index: 350; }
   .header .global-language.open .global-language-btn { color: #444; }
   .header .global-language.open .global-language-btn:after { border-color: #444 transparent transparent transparent; }
-  .header .global-language-btn { top: 0; color: #999; display: block; margin: 18px 0; padding: 0 24px 0 0; font-size: 15px; }
+  .header .global-language-btn { top: 0; color: #aaa; display: block; margin: 14px 8px 0 0; padding: 0 24px 0 0; font-size: 15px; }
   .header .global-language-btn .lang { display: inline; }
   .header .global-language-btn:before { float: left; content: "\e60a"; font-size: 16px; line-height: 24px; margin-right: 3px; }
-  .header .global-language-btn:after { content: ''; display: block; position: absolute; top: 10px; right: 13px; width: 0; height: 0; border-style: solid; border-width: 5px 5px 0 5px; border-color: #999 transparent transparent transparent; }
-  .header .global-language-btn:hover { color: #444; }
-  .header .global-language-btn:hover:after { border-color: #444 transparent transparent transparent; } }
+  .header .global-language-btn:after { content: ''; display: block; position: absolute; top: 14px; right: 3px; width: 0; height: 0; border-style: solid; border-width: 5px 5px 0 5px; border-color: #aaa transparent transparent transparent; }
+  .header .global-language-btn:hover { color: #777; }
+  .header .global-language-btn:hover:after { border-color: #777 transparent transparent transparent; } }
 @media (min-width: 1512px) { .header .header-inner { width: 90%; } }
 
 .sub-menu .sub-menu-inner { background-color: rgba(255, 255, 255, 0.9); -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box; max-width: 1512px; margin: 0 auto; width: 100%; }
@@ -1071,7 +1055,7 @@ body { background-color: #183840; position: relative; }
   .video-list .video-items li { width: 33.3333333333%; }
   .video-list .video-items li:nth-child(3n) { float: right; } }
 
-.header-google-search { width: 100%; background: #455f65 !important; }
+.header-google-search { width: 100%; background: #455f65; border-bottom: 1px solid #455f65; }
 .header-google-search .gsc-search-box { padding: 0; margin: 0; position: relative; }
 .header-google-search td { margin: 0 !important; padding: 0 !important; }
 .header-google-search td.gsc-input:after { position: absolute; top: 18px; left: 52px; content: '搜尋 iing.tw'; color: #ccc; font-size: 15px; line-height: 24px; z-index: 45; }
@@ -1087,13 +1071,13 @@ body { background-color: #183840; position: relative; }
 .header-google-search input.gsc-search-button { position: absolute; border-color: transparent; background: transparent; color: transparent; min-width: initial; width: 100%; height: 100%; margin: 0; padding: 0; border: none; display: block; }
 .header-google-search input.gsc-search-button:focus { outline: none; }
 .header-google-search td.gsc-clear-button { position: absolute; display: none; }
-@media (min-width: 1025px) { .header-google-search { width: 24px; height: 24px; background: transparent !important; }
+@media (min-width: 1025px) { .header-google-search { width: 24px; height: 24px; background: transparent; border-bottom: none; }
   .header-google-search td.gsc-input { position: absolute; right: -7px; top: -2px; }
   .header-google-search td.gsc-input:after { display: none; }
   .header-google-search input.gsc-input { background-color: #eee !important; width: 0px; padding: 3px 18px 3px 18px; color: #777; opacity: 0; -webkit-transition: opacity 0.5s, width 0.5s, visibility 0s; -webkit-transition-delay: 0s, 0s, 0.5s; -moz-transition: opacity 0.5s, width 0.5s, visibility 0s 0.5s; -o-transition: opacity 0.5s, width 0.5s, visibility 0s 0.5s; transition: opacity 0.5s, width 0.5s, visibility 0s 0.5s; visibility: hidden; }
   .header-google-search input.gsc-input:focus { width: 172px; opacity: 1; visibility: visible; padding: 3px 30px 3px 18px; -webkit-transition: opacity 0.5s, width 0.5s, padding 0.5s; -moz-transition: opacity 0.5s, width 0.5s, padding 0.5s; -o-transition: opacity 0.5s, width 0.5s, padding 0.5s; transition: opacity 0.5s, width 0.5s, padding 0.5s; }
-  .header-google-search td.gsc-search-button { position: relative; width: 24px; height: 24px; top: 0; left: 0; }
-  .header-google-search td.gsc-search-button:before { color: #999; top: 0; left: 0; font-size: 16px; line-height: 24px; }
+  .header-google-search td.gsc-search-button { position: relative; width: 20px; height: 24px; top: 0; left: 0; }
+  .header-google-search td.gsc-search-button:before { color: #aaa; top: 0; left: 0; font-size: 16px; line-height: 24px; }
   .header-google-search input.gsc-search-button { top: 0; left: 0; }
   .header-google-search:hover input.gsc-input { width: 172px; opacity: 1; padding: 3px 30px 3px 18px; visibility: visible; -webkit-transition: opacity 0.5s, width 0.5s, padding 0.5s; -moz-transition: opacity 0.5s, width 0.5s, padding 0.5s; -o-transition: opacity 0.5s, width 0.5s, padding 0.5s; transition: opacity 0.5s, width 0.5s, padding 0.5s; } }
 
