--- a/policies/disability-equity.html.slim
+++ b/policies/disability-equity.html.slim
@@ -32,7 +32,7 @@
       p 某天，我的臉書上面有一位朋友留言。她是個女性，她說，她是一個弱勢身障者。身障者的聲音很小，在社會的角落裡，常常被忽略。
     .blockquote-name: span 蔡英文
 
-  .section-class.gray-block.scroll-spy-section#section-1 data-spy-index="1"
+  .section-class.scroll-spy-section#section-1 data-spy-index="1"
     span.animation.fade-in 現況
 
   .section.gray-block
@@ -48,7 +48,7 @@
           li.animation.fade-in 從障別人口特性來看，視覺障礙、聽覺障礙、肢體障礙、重要器官失去功能者、失智症、多重障礙人口，多集中於45歲以上；慢性精神病患者多數集中在30至59歲的年齡層。
           li.animation.fade-in 從身心障礙者的居住型態來看，台灣有92.84％的身心障礙者居住在家中，居住於教養、養護機構者僅占6.82％。
 
-  .section-class.gray-block.scroll-spy-section#section-2 data-spy-index="2"
+  .section-class.scroll-spy-section#section-2 data-spy-index="2"
     span.animation.fade-in 困境
 
   .section.image-theme style="background-image: url('/images/policies_image/disability_equity/reason_bg.jpg')"
@@ -82,7 +82,7 @@
     blockquote.bigtext.animation.slide-up: p 身心障礙者最大的障礙，其實並不是來自於自己的身體或心理；而是來自於社會的不友善，甚至是偏見與歧視，還有政府不夠重視障礙者的基本人權。<br><br>如果有一天，我們所打造的制度與環境，讓身心障礙者也可以自由自在、尊嚴平等地生活，身心障礙這個名詞，可能會從此消失。
     .blockquote-name: span 蔡英文
 
-  .section-class.gray-block.scroll-spy-section#section-3 data-spy-index="3"
+  .section-class.scroll-spy-section#section-3 data-spy-index="3"
     span.animation.fade-in 目標
 
   .section.white-block
@@ -99,7 +99,7 @@
           li.animation.fade-in
             h4.section-sub-title 障礙者於生命發展各階段的需求應受重視，政府於政策規劃及服務輸送時應考量其特殊性，並應有障礙者參與決策過程。
 
-  .section-class.gray-block.scroll-spy-section#section-3 data-spy-index="4"
+  .section-class.scroll-spy-section#section-3 data-spy-index="4"
     span.animation.fade-in 主張
 
   .section
