--- a/policies/food-safely.html.slim
+++ b/policies/food-safely.html.slim
@@ -31,7 +31,7 @@
     blockquote: p 食安管理的重點在於「安全」這兩個字，現代政府的責任，已經不只是要讓民眾「有得吃」而已，而是要建立從農場到餐桌的安全體系，讓民眾「吃得安心又安全」。
     .blockquote-name: span 蔡英文
 
-  .section-class.gray-block.scroll-spy-section#section-1 data-spy-index="1"
+  .section-class.scroll-spy-section#section-1 data-spy-index="1"
     span.animation.fade-in 主張
 
   .section
@@ -54,7 +54,7 @@
           h4.section-sub-title 全面性瞭解：「從法律到醫療」
           p 從根本性、系統性、更廣泛的角度，去瞭解食品生產流程可能牽涉到的風險。具體而言，則包括從法制、貿易、毒理學、公共政策、廠商內外部管理、溝通、風險評估到醫療等諸多面向。
 
-  .section-class.gray-block.scroll-spy-section#section-2 data-spy-index="2"
+  .section-class.scroll-spy-section#section-2 data-spy-index="2"
     span.animation.fade-in 原因
 
   .section.image-theme style="background-image: url('/images/policies_image/food_safely/reason_bg.jpg')"
@@ -106,7 +106,7 @@
           h4.section-sub-title 管控不足
           p 根據環保署的資料指出，臺灣僅列管302種毒物，而國際上認定毒性較明確的化學物質6000種，每年多增加100多種新化學物質。急需投入高度資源和大量專業人力，才可以補足這個漏洞。
 
-  .section-class.gray-block.scroll-spy-section#section-3 data-spy-index="3"
+  .section-class.scroll-spy-section#section-3 data-spy-index="3"
     span.animation.fade-in 政策
 
   .section.white-block
@@ -225,7 +225,7 @@
 
 
 
-  .section-class.gray-block.scroll-spy-section#section-4 data-spy-index="4"
+  .section-class.scroll-spy-section#section-4 data-spy-index="4"
     span.animation.fade-in 總結
 
   .section
