--- a/policies/geriatric-care.html.slim
+++ b/policies/geriatric-care.html.slim
@@ -31,7 +31,7 @@
     blockquote: p 有過照顧經驗的人都知道，如果沒有很大的耐心，即使是最親近的家人，也會感到辛苦。長期照顧是台灣許多家庭正在面臨的負擔。作為一個政治人物，我的責任就是提出問題的解決方案。
     .blockquote-name: span 蔡英文
 
-  .section-class.gray-block.scroll-spy-section#section-1 data-spy-index="1"
+  .section-class.scroll-spy-section#section-1 data-spy-index="1"
     span.animation.fade-in 主張
 
   .section.gray-block
@@ -47,7 +47,7 @@
           h4.section-sub-title 減輕負擔：付得起、用得上、溫馨而人性的長照服務體系
           p 政府必須負起責任建立完整的長期照顧體系，努力去建造一個付得起、用得上、溫馨而人性的長照服務體系，照顧每一個有需要的人，減輕家庭照顧負擔。
 
-  .section-class.gray-block.scroll-spy-section#section-2 data-spy-index="2"
+  .section-class.scroll-spy-section#section-2 data-spy-index="2"
     span.animation.fade-in 原因
 
   .section.image-theme style="background-image: url('/images/policies_image/geriatric_care/reason_bg.jpg')"
@@ -114,7 +114,7 @@
             h4.section-sub-title 城鄉差距嚴重、未能因地制宜
             p 財政資源短缺的縣市，長期照顧資源嚴重不足。而如原住民族部落因地理偏遠、專業長期照顧資源不足，無法以都市補助標準與專業條件來統一規範，在不影響專業品質下，長照資源因地制宜，採行殊異的專業條件要求與補助標準有其必要。
 
-  .section-class.gray-block.scroll-spy-section#section-3 data-spy-index="3"
+  .section-class.scroll-spy-section#section-3 data-spy-index="3"
     span.animation.fade-in 政策
 
   .section.white-block
@@ -178,7 +178,7 @@
             h4.section-sub-title 建立專業照顧管理制度
             p 建立專業照顧管理制度，將照顧管理專員納入專門職業及技術人員考試，確保照顧服務品質。
 
-  .section-class.gray-block.scroll-spy-section#section-4 data-spy-index="4"
+  .section-class.scroll-spy-section#section-4 data-spy-index="4"
     span.animation.fade-in 總結
 
   .section
