--- a/policies/housing-policy.html.slim
+++ b/policies/housing-policy.html.slim
@@ -30,7 +30,7 @@
     blockquote: p 每天辛苦賺錢，要買間房子，卻是連想都不敢想的一個夢想。高房價、高空屋、低收入，這是台灣社會長期以來的困境。這個困境，不是不能突破，而是有沒有具體的行動去面對它、處理它。<br>我們的目標，就是要建立符合民生需求的住宅政策，以及可以有效發展內需的不動產產業體系。
     .blockquote-name: span 蔡英文
 
-  .section-class.gray-block.scroll-spy-section#section-1 data-spy-index="1"
+  .section-class.scroll-spy-section#section-1 data-spy-index="1"
     span.animation.fade-in 現狀
 
   .section.image-theme style="background-image: url('/images/policies_image/housing_policy/reason_bg.jpg')"
@@ -121,7 +121,7 @@
         p 低利率與國內資金管控失當，是造成當前房市問題的兩大外部衝擊。低利率與熱錢過多屬總體經濟與金融政策範疇，但各界多認為2009年遺贈稅調降與後續資金引導政策缺漏，是造成近年房市炒作的重要近因。<br>當金融機構資金過剩，銀行加強放款與鼓勵融資成為必要之惡，進而導致資金過度投入房市，以及在前述各項制度管控不足環境下，因而衍生房價高漲、供給過剩、投機漫延、銀行惡性競爭、金融風險攀升等問題。
 
 
-  .section-class.gray-block.scroll-spy-section#section-2 data-spy-index="2"
+  .section-class.scroll-spy-section#section-2 data-spy-index="2"
     span.animation.fade-in 政策
 
   .section
@@ -270,7 +270,7 @@
 
 
 
-  .section-class.gray-block.scroll-spy-section#section-3 data-spy-index="3"
+  .section-class.scroll-spy-section#section-3 data-spy-index="3"
     span.animation.fade-in 總結
 
   .section
