--- a/policies/physical-culture.html.slim
+++ b/policies/physical-culture.html.slim
@@ -31,7 +31,7 @@
       p 長期以來，體育在台灣總是沒有受到足夠的重視。不論是全民運動、競技運動、或是退役選手的職涯照顧，或是運動產業的發展、運動科學的投入，都不夠健全。
     .blockquote-name: span 蔡英文
 
-  .section-class.gray-block.scroll-spy-section#section-1 data-spy-index="1"
+  .section-class.scroll-spy-section#section-1 data-spy-index="1"
     span.animation.fade-in 主張
 
   .section.gray-block
@@ -42,7 +42,7 @@
         p 在競技運動方面，要從根紮起培訓菁英，帶動國家競爭力，尤其要舉辦主流運動邀請賽，結合品牌行銷、異業結盟、媒體宣傳，積極走入國際，讓全世界的運動迷都知道台灣。
         p 在全民運動方面，要健全運動指導員制度，善用退役選手的運動專業，有效促進全民熱愛運動、規律運動、正確運動，目標要讓每位國人每年減少看一次醫生，降低慢性病發生率及失能率，讓國人生活更健康更精彩。
 
-  .section-class.gray-block.scroll-spy-section#section-2 data-spy-index="2"
+  .section-class.scroll-spy-section#section-2 data-spy-index="2"
     span.animation.fade-in 現況
 
   .section.image-theme style="background-image: url('/images/policies_image/physical_culture/reason_bg.jpg')"
@@ -67,7 +67,7 @@
         p 台灣的多元族群文化，運動菁英人才輩出，已經逐漸受到國際的注目，而我們的體育，更持續走出台灣、走向世界，從過去的楊傳廣、紀政，到現在的王建民、曾雅妮、陳偉殷、盧彥勳、詹詠然等，有許許多多的體育好手，憑藉著努力和實力，在國際上創造優秀的成績，讓自己發光發熱，更讓世界看見台灣。
         p 但是當前我國菁英選手的全人教育培訓，僅注重競技成績表現，缺乏體育以外專業知識與能力的培養，欠缺運動科研的整體投入，以及良好的競賽規劃與健康維護，選手退役後的職涯輔導也不夠健全。
 
-  .section-class.gray-block.scroll-spy-section#section-3 data-spy-index="3"
+  .section-class.scroll-spy-section#section-3 data-spy-index="3"
     span.animation.fade-in 政策
 
   .section.white-block
