--- a/stylesheets/all.css
+++ b/stylesheets/all.css
@@ -1315,11 +1315,13 @@ body { background-color: #183840; position: relative; }
 .global-page .header .primary-nav { display: none; }
 .global-page .header .press-release { display: none; }
 .global-page .header .menu-btn { display: none; }
+.global-page .header .global-language { right: 6px; }
 .global-page .copy { text-align: center; font-size: 13px; line-height: 24px; padding-bottom: 48px; }
 .global-page .post-list { padding-top: 12px; }
 @media (min-width: 480px) { .global-page .post-list { padding-top: 0px; } }
 @media (min-width: 848px) { .global-page .post-list { padding-top: 24px; } }
 @media (min-width: 1025px) { .global-page .header .logo { padding: 6px 0; left: 50%; -webkit-transform: translateX(-50%); -moz-transform: translateX(-50%); -ms-transform: translateX(-50%); -o-transform: translateX(-50%); transform: translateX(-50%); }
+  .global-page .header .global-language { right: 0px; }
   .global-page .page-bottom-illustrator { padding-top: 0; padding-bottom: 20%; margin-bottom: 24px; }
   .global-page .page-bottom-illustrator:before, .global-page .page-bottom-illustrator:after { margin-bottom: 0%; } }
 
