移除 hero 區塊 macho.js 功能

--- a/partial/_hero.html.slim
+++ b/partial/_hero.html.slim
@@ -4,22 +4,22 @@
       a.hero-block.large style="background-image: url('/images/hero-1.jpg')"  href="/posts/"
         .hero-block-title
           .hero-block-title-inner
-            .title.auto-break-text 人民期待有責任，有方向感的政府
-            .description.auto-break-text 這是一段文字敘述，可以寫大約60字左右，超過會沒辦法顯示，建議在25到55字之間。這是一段文字敘述。
+            .title 人民期待有責任，有方向感的政府
+            .description 這是一段文字敘述，可以寫大約60字左右，超過會沒辦法顯示，建議在25到55字之間。這是一段文字敘述。
   .hero-wrap-right
     .hero-wrap-inner
       .hero-block-wrap
         a.hero-block.small style="background-image: url('/images/hero-2.jpg')" href="http://melody.iing.tw" target="_blank"
           .hero-block-title
             .hero-block-title-inner
-              .title.auto-break-text 三隻小豬，點亮台灣
-              .description.auto-break-text 這是一段文字敘述，可以寫大約50字左右，超過會沒辦法顯示
+              .title 三隻小豬，點亮台灣
+              .description 這是一段文字敘述，可以寫大約50字左右，超過會沒辦法顯示
       .hero-block-wrap
         a.hero-block.small style="background-image: url('/images/hero-3.jpg')" href="http://donate.iing.tw" target="_blank"
           .hero-block-title
             .hero-block-title-inner
-              .title.auto-break-text 小額捐款
-              .description.auto-break-text 這是一段文字敘述
+              .title 小額捐款
+              .description 這是一段文字敘述
     .hero-block-wrap
       a.hero-block.medium style="background-image: url('/images/hero-video.jpg')" href="http://light.iing.tw" target="_blank"
         video.video-bg autoplay="true" loop="true" poster="/images/hero-video-thumb.jpg"
@@ -28,5 +28,5 @@
           source src="/images/hero-video.ogg" type="video/ogg"
         .hero-block-title
           .hero-block-title-inner
-            .title.auto-break-text 小英足跡・影片專區
+            .title 小英足跡・影片專區
             .description 我們正走在點亮台灣的第一哩路。<br>每支影片都是我們所踏出的一步。
